Added/styled header, added controller.

--- a/client/src/components/Wrapper/style.css
+++ b/client/src/components/Wrapper/style.css
@@ -5,7 +5,7 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  font-family: "Playfair Display", serif;
+  font-family: "Indie Flower", cursive;
 }
 
 .wrapper {
